added some tests

--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.1</spring-cloud.version>
-        <aws.sdk.version>1.12.174</aws.sdk.version>
+        <aws.sdk.version>1.12.186</aws.sdk.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <swagger.version>3.0.0</swagger.version>
         <fmt.version>2.13</fmt.version>
+        <junit.version>5.8.2</junit.version>
+        <mockito.version>4.4.0</mockito.version>
     </properties>
 
     <dependencies>
@@ -104,7 +106,25 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger.version}</version>
         </dependency>
+
+        <!-- JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito 4 -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
