--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ amazon.endpoint=${AWS_ENDPOINT}
 amazon.access-key=${AWS_ACCESS_KEY_ID}
 amazon.secret-key=${AWS_SECRET_ACCESS_KEY}
 
+logging.level.web=INFO
+
 logging.level.org.apache.http.wire=${LOGGING_LEVEL_DYNAMO_REQUEST}
 logging.level.com.amazonaws.request=${LOGGING_LEVEL_DYNAMO_REQUEST}
