--- a/pom.xml
+++ b/pom.xml
@@ -4,29 +4,95 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jhonatan-dev</groupId>
-    <artifactId>dataloaderfordynamo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>dataloaderfordynamo</name>
-    <description>Load data to your tables of DynamoDB.</description>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>2.7.11</version>
         <relativePath/>
     </parent>
 
+    <groupId>io.github.jhonatandevperu</groupId>
+    <artifactId>spring-dynamo-data-loader</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <name>spring-dynamo-data-loader</name>
+    <inceptionYear>2023</inceptionYear>
+
+    <description>A small spring boot application to write per batch many records to any DynamoDB table.</description>
+    <url>https://github.com/jhonatandevperu/spring-dynamo-data-loader-app-java</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
     <properties>
-        <java.version>11</java.version>
-        <spring-cloud.version>2021.0.1</spring-cloud.version>
-        <aws.sdk.version>1.12.305</aws.sdk.version>
-        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <aws.sdk.version>1.12.459</aws.sdk.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <swagger.version>3.0.0</swagger.version>
-        <fmt.version>2.13</fmt.version>
-        <junit.version>5.8.2</junit.version>
-        <mockito.version>4.4.0</mockito.version>
+        <fmt.version>2.20</fmt.version>
+        <junit.version>5.9.3</junit.version>
+        <mockito.version>5.2.0</mockito.version>
     </properties>
+
+    <developers>
+        <developer>
+            <id>jhonatandevperu</id>
+            <name>Jhonatan Castillo Salvador</name>
+            <email>jhonatancastillosalvador@gmail.com</email>
+            <timezone>-5</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/jhonatandevperu/spring-dynamo-data-loader-app-java</url>
+        <connection>scm:git:ssh://github.com/jhonatandevperu/spring-dynamo-data-loader-app-java.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jhonatandevperu/spring-dynamo-data-loader-app-java.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/jhonatandevperu/spring-dynamo-data-loader-app-java/issues</url>
+    </issueManagement>
+
+    <distributionManagement>
+        <site>
+            <id>website</id>
+            <url>https://github.com/jhonatandevperu/spring-dynamo-data-loader-app-java</url>
+        </site>
+        <repository>
+            <id>github-release</id>
+            <name>GitHub Release Packages</name>
+            <url>https://maven.pkg.github.com/jhonatandevperu/spring-dynamo-data-loader-app-java</url>
+        </repository>
+        <snapshotRepository>
+            <id>github-snapshot</id>
+            <name>GitHub Snapshot Packages</name>
+            <url>https://maven.pkg.github.com/jhonatandevperu/spring-dynamo-data-loader-app-java</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- JUnit -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -40,19 +106,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -109,39 +165,36 @@
 
         <!-- JUnit 5 -->
         <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- Mockito 4 -->
+        <!-- Mockito 5 -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
             <plugin>
-                <!-- FMT Maven -->
-                <groupId>com.coveo</groupId>
+                <groupId>com.spotify.fmt</groupId>
                 <artifactId>fmt-maven-plugin</artifactId>
                 <version>${fmt.version}</version>
                 <executions>
