--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,11 @@
+server.port=0
+
 amazon.dynamodb.region=eu-west-1
 amazon.endpoint=http://localhost:4566/
 amazon.access-key=test
 amazon.secret-key=test
 
 logging.level.web=INFO
-logging.level.org.apache.http.wire=DEBUG
-logging.level.com.amazonaws.request==DEBUG
+
+logging.level.org.apache.http.wire=debug
+logging.level.com.amazonaws.request=debug
