fix sonarlint issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
-amazon.dynamodb.region=${AWS_REGION}
-amazon.endpoint=${AWS_ENDPOINT}
-amazon.access-key=${AWS_ACCESS_KEY_ID}
-amazon.secret-key=${AWS_SECRET_ACCESS_KEY}
+aws.dynamodb.region=${AWS_REGION}
+aws.endpoint=${AWS_ENDPOINT}
+aws.access-key-id=${AWS_ACCESS_KEY_ID}
+aws.secret-access-key-id=${AWS_SECRET_ACCESS_KEY}
 
 logging.level.web=INFO
 
