--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=0
 
-amazon.dynamodb.region=eu-west-1
-amazon.endpoint=http://localhost:4566/
-amazon.access-key=test
-amazon.secret-key=test
+aws.dynamodb.region=eu-west-1
+aws.endpoint=http://localhost:4566/
+aws.access-key-id=test
+aws.secret-access-key-id=test
 
 logging.level.web=INFO
 
