--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -25,7 +25,7 @@ jobs:
         run: mvn -B -U --no-transfer-progress -s $GITHUB_WORKSPACE/settings.xml verify
         env:
           GITHUB_USERNAME: $GITHUB_ACTOR
-          GITHUB_TOKEN: ${{ secrets.PKG_GITHUB_READ_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
     needs: build
